--- a/lib/api_modules/templates/details.handlebars
+++ b/lib/api_modules/templates/details.handlebars
@@ -11,7 +11,7 @@
 	<DateUpdated>2012-04-09T09:51:47.75</DateUpdated>
 	<FileInd>20288</FileInd>
 	<DateFilePurged xsi:nil="true"/>
-	<NunberOfVolumes>1</NunberOfVolumes>
+	<NumberOfVolumes>1</NumberOfVolumes>
 	<DateNameEntered>{{DateEntered}}</DateNameEntered>
 	<PhoneId>4367251</PhoneId>
 	<AddressId>6096419</AddressId>
